
	* Fixed bug #12010: Task uid should be displayed in Scheduler's BE module list view
	* Follow-up to UI-Bug #F3282: Changed icon_warning.gif to match flash messages' warning icon
	* Fixed bug #11995: Prompt for keyboard input does not get displayed in CLI scripts
	* Fixed bug #11224: Special menu directory only renders 1st level if special.value is a mount point (Thanks to Xavier Perseguers)

2009-09-20  Benjamin Mack  <benni@typo3.org>

	* Added additional documentation for feature #12008: User setup misses a function for inserting fields at a position

2009-09-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11933: FrontendEditing (classic) does not work when editing forms on page

2009-09-19  Francois Suter  <francois@typo3.org>

	* Fixed bug #12011: Wrong layout of datepicker in the Scheduler

2009-09-19  Steffen Kamper  <info@sk-typo3.de>

	* Added feature #10585: Enable BE-User to change their OpenID
	* Added feature #12008: User setup misses a function for inserting fields at a position
	* Fixed bug #12003: EncryptionKey generation in install tool (1-2-3-mode) still uses old encryption
	* Fixed bug #11884: User setup: buttons for create/delete ENABLE_INSTALL_TOOL-file are not integrated in user setup
	* Fixed bug #11896: User Setup miss save of be_users fields and miss handling of default value

2009-09-19  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #12005: Reports don't have a back reference to the reports module
	* Follow-up to feature #12001: Add checks from t3lib_BEfunc::displayWarningMessages() to the status report

2009-09-19  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11917: TCEforms suggest fails with empty label or label_alt field (thanks to Andreas Wolf)
	* Fixed bug #11988: Extension Manager is not translatable (part 6) (thanks to Christopher Stelmaszyk)
	* Fixed bug #11986: dynamic update of translation status im EM is broken
	* Fixed bug #11013: Generate Random Key still does not work (thanks to Marcus Krause)