@@ -14,6 +14,7 @@
 	* Follow-up to UI-Bug #F3282: Changed icon_warning.gif to match flash messages' warning icon
 	* Fixed bug #11995: Prompt for keyboard input does not get displayed in CLI scripts
 	* Fixed bug #11224: Special menu directory only renders 1st level if special.value is a mount point (Thanks to Xavier Perseguers)
+	* Cleanup #11989: Install Tool message colors should match flash message colors
 
 2009-09-20  Benjamin Mack  <benni@typo3.org>
 
